crates/rspack_macros/tests/hook/unit_struct.stderr
error: expected named struct
 --> tests/hook/unit_struct.rs:3:1
  |
3 | #[plugin]
  | ^^^^^^^^^
  |
  = note: this error originates in the attribute macro `plugin` (in Nightly builds, run with -Z macro-backtrace for more info)
